code/src/styles/index.css
:root {
  --highlight: rgb(208, 51, 77);
  --background-color: rgb(245, 245, 245);
  --theme-color: rgb(152, 151, 151);
  --font-color: #3e3c3c;
  --shadow: black;
  --fancy: rosybrown;
}

body {
  margin: 0;
  overflow-x: hidden;
  font-family: "Roboto", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--font-color);
  font-family: "Fira Code", monospace;
  background-color: var(--background-color);
}

.loading-screen {
  width: 100vw;
  height: 100vh;
}

.grid {
  display: grid;
  place-items: center;
}

.highlight {
  color: var(--highlight);
  font-weight: 500;
}

.move-btn {
  margin-left: -8px;
  margin-bottom: 0;
  margin-top: 10px;
}

.symbols-counter,
.sub-text-styling {
  font-size: 12px;
  margin-top: 0;
  color: var(--theme-color);
  margin-bottom: 0;
}

.new-thought-container {
  width: 300px;
}

.new-thought-label,
.thought-text {
  display: flex;
  flex-wrap: wrap;
  font-size: 14px;
  margin-top: 12px;
}

.new-thought-space {
  margin: 10px;
}

.new-thought-card {
  -webkit-box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
  box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
  border-radius: 2px;
}

textarea {
  width: 296px;
  height: 40px;
  margin-top: 16px;
  margin-left: -2px;
  font-size: 16px;
  border: 1px solid var(--theme-color);
  outline: none;
  color: var(--theme-color);
  cursor: pointer;
}

textarea:focus {
  border: 1px solid var(--theme-color);
}

.likes-counter-container {
  margin: 10px;
  text-align: center;
}

.like-counter {
  font-size: 14px;
}

.update-button-container {
  margin: 30px;
}

.each-thought-wrapper {
  width: 334px;
  border-radius: 2px;
  margin-top: 30px;
  -webkit-box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
  box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
}

.inner-each-thought-container {
  padding: 6px;
  display: flex;
  flex-direction: column;
}

.like-btn-post-moment-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-top: 20px;
}

@media (min-width: 767px) {
  .symbols-counter,
  .sub-text-styling {
    font-size: 16px;
  }
  .new-thought-container {
    width: 550px;
    padding: 18px;
  }
  .each-thought-wrapper {
    width: 620px;
    margin-top: 40px;
  }
  .new-thought-label,
  .thought-text {
    display: flex;
    flex-wrap: wrap;
    font-size: 20px;
    margin-top: 14px;
    /*? */
  }
  .new-thought-space {
    margin: 40px;
  }
  textarea {
    width: 544px;
    height: 58px;
    margin-top: 30px;
    font-size: 18px;
  }
  .like-counter {
    font-size: 20px;
  }
  .update-button-container {
    margin: 50px;
  }
  .inner-each-thought-container {
    padding: 14px;
  }
  .like-btn-post-moment-container {
    margin-top: 20px;
  }
}

